# M2_CIML_Automated-image-capture

./: .gitignore  .gitignore.save  INSTALL.md  README.md  info  pyproject.toml  requirements.txt
Arduino/: config_modif.md  grbl_config.txt
Arduino/controllerboard_cnc_joyit/: controllerboard_cnc_joyit.ino
RaspberryPi/: Run_program.sh  camera.py  cli.py  config.py  functions.py  kivy_ui.py  main.py  mock_camera.py  python_grbl.py  python_grbl2.py  scanner.kv  scanner.py  ui_tk.py
